[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covalence-client"
version = "0.1.0"
description = "Python client for the Covalence knowledge engine API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ourochronos" }]
requires-python = ">=3.10"
keywords = ["covalence", "knowledge-graph", "ai", "memory", "rest-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/ourochronos/covalence-py"
Repository = "https://github.com/ourochronos/covalence-py"

[tool.hatch.build.targets.wheel]
packages = ["covalence"]

# ---------------------------------------------------------------------------
# Ruff (linting + formatting)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["covalence"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
